오류나는 부분 수정

--- a/templates/html/Home/home.html
+++ b/templates/html/Home/home.html
@@ -8,15 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>홈</title>
 
-    <link rel="stylesheet" href="/static/css/common.css">
-    <link rel="stylesheet" href="/static/css/Login/login.css">
-    <link rel="stylesheet" href="/static/css/top-background.css">
-    <link rel="stylesheet" href="/static/css/home.css">
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Login/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/top-background.css' %}">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script src="{% static '/js/jquery-3.7.1.min.js' %}"></script>
+    <script src="{%static '/js/login-modal.js' %}"></script>
 
     <style>
         header {
@@ -33,6 +34,11 @@
             background-color: transparent;
             transition: background-color 0.3s, color 0.3s;
             z-index: 1;
+        }
+
+        .login-modal {
+            display: none;
+            z-index:2;
         }
 
         .logo-img {
@@ -99,11 +105,13 @@
 </head>
 
 <body>
+    <div class="login">{% include "html/Login/login.html" %}</div>
+
     <!-- 헤더 -->
     <header id="home-header">
         <!-- 로고 이미지 -->
         <div class="logo-img">
-            <a href="{% url 'index' %}"><img src="/static/img/logo.png" style="width: 100%; height: 100%;"></a>
+            <a href="{% url 'home' %}"><img src="/static/img/logo.png" style="width: 100%; height: 100%;"></a>
         </div>
         <div class="btn">
             <!-- 로그인 버튼 -->
@@ -112,7 +120,7 @@
             </div>
             <!-- 회원가입 버튼 -->
             <div class="signup-btn">
-                회원가입
+                <a href="{% url 'common:signup' %}"> 회원가입</a>
             </div>
         </div>
     </header>
@@ -127,23 +135,23 @@
     <!-- 클릭하면 해당 페이지로 이동 -->
     <div class="nav-btn">
         <div class="questionBtn">
-            <div><i class="fa-solid fa-layer-group"></i></div>
+            <div><a href="{% url 'cmapp:question_list' 0 %}"><i class="fa-solid fa-layer-group"></i></a></div>
             <div>질문</div>
         </div>
         <div class="infromationBtn">
-            <div><i class="fa-solid fa-layer-group"></i></div>
+            <div><a href="{% url 'cmapp:info_list' 0 %}"><i class="fa-solid fa-layer-group"></i></a></div>
             <div>정보</div>
         </div>
         <div class="counselingBtn">
-            <div><i class="fa-solid fa-layer-group"></i></div>
+            <div><a href="/"><i class="fa-solid fa-layer-group"></i></a></div>
             <div>상담</div>
         </div>
         <div class="studyBtn">
-            <div><i class="fa-solid fa-layer-group"></i></div>
+            <div><a href="/"><i class="fa-solid fa-layer-group"></i></a></div>
             <div>스터디</div>
         </div>
         <div class="contestBtn">
-            <div><i class="fa-solid fa-layer-group"></i></div>
+            <div><a href="/"><i class="fa-solid fa-layer-group"></i></a></div>
             <div>공모전/대회</div>
         </div>
     </div>
@@ -164,6 +172,12 @@
 
     <!-- 바닥글 -->
     <div class="footers"></div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            initializeLoginModal();
+        });
+    </script>
 
     <script type="text/javascript">
         window.addEventListener('scroll', function () {
