--- a/templates/html/Home/home.html
+++ b/templates/html/Home/home.html
@@ -56,7 +56,8 @@
         }
 
         .login-btn,
-        .signup-btn {
+        .signup-btn,
+        .profile-btn {
             font-size: 25px;
             font-weight: 500;
             color: white;
@@ -114,6 +115,12 @@
             <a href="{% url 'home' %}"><img src="/static/img/logo.png" style="width: 100%; height: 100%;"></a>
         </div>
         <div class="btn">
+            {% if user.is_authenticated %}
+            <!-- 프로필 버튼(지금은 로그아웃) -->
+            <div class="profile-btn">
+                <a href="{% url 'common:logout' %}">프로필</a>
+            </div>
+            {% else %}
             <!-- 로그인 버튼 -->
             <div class="login-btn">
                 로그인
@@ -122,6 +129,7 @@
             <div class="signup-btn">
                 <a href="{% url 'common:signup' %}"> 회원가입</a>
             </div>
+            {% endif %}
         </div>
     </header>
 
@@ -171,7 +179,7 @@
     </div>
 
     <!-- 바닥글 -->
-    <div class="footers"></div>
+    <div class="footers">{% include "html/footer.html" %}</div>
 
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
