--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -37,7 +37,8 @@
         </nav>
         <!-- 로그인 버튼 / 로그아웃 버튼 -->
         {% if user.is_authenticated %}
-            <a class="profile-btn" href="{% url 'common:logout' %} ">프로필</a>
+            <a class="profile-btn" href="{% url 'cmapp:profile' %} ">프로필</a>
+            <a class="logout-btn" href="{% url 'common:logout' %} ">로그아웃</a>
         {% else %}
             <a class="login-btn">로그인</a>
         {% endif %}
