--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -16,14 +16,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script src="/js/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $(".footers").load("/html/footer.html");
-            $(".login").load("/templates/html/Login/login.html", function () {
-                initializeLoginModal();
-            });
-        });
-    </script>
 </head>
 
 <body>
@@ -31,13 +23,13 @@
     <header>
         <!-- 로고 이미지 -->
         <div class="logo-img">
-            <a href="{% url 'index' %}"><img src="/static/img/logo.png" style="width: 100%; height: 100%;"></a>
+            <a href="{% url 'home' %}"><img src="/static/img/logo.png" style="width: 100%; height: 100%;"></a>
         </div>
         <!-- nav -->
         <nav>
             <ul class="header-menutop">
                 <li class="question">
-                    <a href="{% url 'index' %}">질문</a>
+                    <a href="{% url 'home' %}">질문</a>
                 </li>
                 <li class="information">
                     <a href="/html/Information/list.html">정보</a>
@@ -53,15 +45,11 @@
                 </li>
             </ul>
         </nav>
-        <!-- 로그인 버튼 -->
-        <div class="login-btn">
-            로그인
+        <!-- 로그아웃 버튼 -->
+        <div class="logout-btn">
+            <a href="{% url 'common:logout' %} ">로그아웃</a>
         </div>
     </header>
-
-    <!-- 로그인 -->
-    <!-- !! 로그인 된 상태에서만 프로필 들어갈 수 있으니 이 부분 지워야함 -->
-    <div class="login"></div>
 
     <div class="profile-container">
         <div class="profileMeta">
@@ -192,7 +180,7 @@
         </div>
 
         <!-- 바닥글 -->
-        <div class="footers"></div>
+        <div class="footers">{% include "html/footer.html" %}</div>
 
         <script src="/static/js/profileEvents.js"></script>
 </body>
