--- a/templates/html/Login/signup.html
+++ b/templates/html/Login/signup.html
@@ -1,15 +1,29 @@
-{% extends 'html/base.html' %}
 {% load static %}
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{% block title %}<title>회원가입</title>{% endblock title %}
+    <!-- title -->
+    <title>회원가입</title>
 
-{% block css %}<link rel="stylesheet" href="{% static '/css/Login/signup.css' %}">{% endblock %}
+    <!-- Bootstrap CSS -->
+    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}"> {% endcomment %}
 
-{% block head_script %}
-<script src="{% static '/js/signup.js' %}"></script>
-{% endblock %}
+    <link rel="stylesheet" href="{% static '/css/common.css' %}">
+    <link rel="stylesheet" href="{% static '/css/Login/signup.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-{% block content %}
+    <!-- head js -->
+    <script src="{%static '/js/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static '/js/signup.js' %}"></script>
+</head>
+<body>
+
 <div class="signup">
     <form class="signup-container" action="{% url 'common:signup' %}" method="post">
         {% csrf_token %}
@@ -100,4 +114,5 @@
 <form id="usernameCheckForm" method="get" action="{% url 'common:signup' %}">
     <input type="hidden" id="name" name="name" value="{{ name|default_if_none:'' }}">
 </form>
-{% endblock %}
+</body>
+</html>
