--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -73,9 +73,12 @@
             </div>
             <div class="Btn">
                 <div class="allViewBtn"><img src="/static/img/gat.png">전체</div>
-                <div class="postViewBtn"><img src="/static/img/gat.png">게시글 <span>[{{ user.author_question.count }} + {{ user.author_information.count }}]</span></div>
-                <div class="commentViewBtn"><img src="/static/img/gat.png">댓글단 글 <span>[{{ user.author_comment.count }} + {{ user.author_information.count }}]</span></div>
-                <div class="likeBtn"><img src="/static/img/gat.png">좋아요한 글 <span>[{{ user.voter_question.count }} + {{ user.voter_information.count }}]</span></div>
+                <div class="postViewBtn"><img src="/static/img/gat.png">게시글 <span>[{{ user.author_question.count }} + {{
+                        user.author_information.count }}]</span></div>
+                <div class="commentViewBtn"><img src="/static/img/gat.png">댓글단 글 <span>[{{ user.author_comment.count }}
+                        + {{ user.author_information.count }}]</span></div>
+                <div class="likeBtn"><img src="/static/img/gat.png">좋아요한 글 <span>[{{ user.voter_question.count }} + {{
+                        user.voter_information.count }}]</span></div>
                 <div class="scrapBtn"><img src="/static/img/gat.png">스크랩 <span>[10]</span></div>
             </div>
         </div>
@@ -119,7 +122,7 @@
                 <div class="view-all">전체 보기<i class="fa-solid fa-arrow-right"></i></div>
             </div>
             <div class="commentView">
-                <span>댓글단 글</span>
+                <span>답변/댓글단 글</span>
                 <div class="comment-list">
                     <div class="comment" id="comment-1">
                         <div class="meta">
