--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
 
@@ -15,7 +16,7 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <script src="/js/jquery-3.7.1.min.js"></script>
+    <script src="{% static '/js/jquery-3.7.1.min.js' %}"></script>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
         <nav>
             <ul class="header-menutop">
                 <li class="question">
-                    <a href="{% url 'home' %}">질문</a>
+                    <a href="{% url 'cmapp:question_list' 0 %}">질문</a>
                 </li>
                 <li class="information">
                     <a href="/html/Information/list.html">정보</a>
@@ -73,9 +74,9 @@
             </div>
             <div class="Btn">
                 <div class="allViewBtn"><img src="/static/img/gat.png">전체</div>
-                <div class="postViewBtn"><img src="/static/img/gat.png">게시글 <span>[{{ user.author_question.count }} + {{ user.author_information.count }}]</span></div>
-                <div class="commentViewBtn"><img src="/static/img/gat.png">댓글단 글 <span>[{{ user.author_comment.count }} + {{ user.author_information.count }}]</span></div>
-                <div class="likeBtn"><img src="/static/img/gat.png">좋아요한 글 <span>[{{ user.voter_question.count }} + {{ user.voter_information.count }}]</span></div>
+                <div class="postViewBtn"><img src="/static/img/gat.png">게시글 <span>[{{ sorted_post_list.count }}]</span></div>
+                <div class="commentViewBtn"><img src="/static/img/gat.png">댓글단 글 <span>[{{ sorted_ca_list.count }}]</span></div>
+                <div class="likeBtn"><img src="/static/img/gat.png">좋아요한 글 <span>[{{ sorted_voted_list.count }}]</span></div>
                 <div class="scrapBtn"><img src="/static/img/gat.png">스크랩 <span>[10]</span></div>
             </div>
         </div>
@@ -92,69 +93,69 @@
             <div class="postView">
                 <span>게시글</span>
                 <div class="post-list">
-                    {% for question in user.author_question.all %}
-                    {% endfor %}
+                    {% for sorted_post in sorted_post_list %}
                     <div class="post" id="post-1">
                         <div class="meta">
-                            <div class="category">질문</div>
-                            <div class="date">24.05.31</div>
+                            <div class="category">
+                                {% if sorted_post.get_model_name == "Question" %}
+                                질문
+                                {% elif sorted_post.get_model_name == "Information" %}
+                                정보
+                                {% endif %}
+                            </div>
+                            <div class="date">{{ sorted_post.create_date }}</div>
                         </div>
-                        <div class="title">안녕</div>
+                        <div class="title">{{ sorted_post.subject }}</div>
                     </div>
-                    <div class="post" id="post-2">
-                        <div class="meta">
-                            <div class="category">정보</div>
-                            <div class="date">24.05.31</div>
-                        </div>
-                        <div class="title">안녕 오늘은 학술제 마감날</div>
-                    </div>
-                    <div class="post" id="post-3">
-                        <div class="meta">
-                            <div class="category">정보</div>
-                            <div class="date">24.05.31</div>
-                        </div>
-                        <div class="title">안녕 오늘은 학술제 마감날</div>
-                    </div>
+                    {% endfor %}
                 </div>
                 <div class="view-all">전체 보기<i class="fa-solid fa-arrow-right"></i></div>
             </div>
             <div class="commentView">
                 <span>댓글단 글</span>
                 <div class="comment-list">
+                    {% for sorted_ca in sorted_ca_list %}
                     <div class="comment" id="comment-1">
                         <div class="meta">
-                            <div class="category">질문</div>
-                            <div class="date">24.05.31</div>
+                            <div class="category">
+                                {% if sorted_ca.get_model_name == "Comment" %}
+                                댓글
+                                {% elif sorted_ca.get_model_name == "Answer" %}
+                                답변
+                                {% endif %}
+                            </div>
+                            <div class="date">{{ sorted_ca.create_date }}</div>
                         </div>
-                        <div class="title">안녕</div>
+                        <div class="title">
+                            {% if sorted_ca.question != null %}
+                                질문 - {{ sorted_ca.question.subject }}
+                            {% else %}
+                                정보 - {{ sorted_ca.information.subject }}
+                            {% endif %}
+                            </div>
                     </div>
-                    <div class="comment" id="comment-2">
-                        <div class="meta">
-                            <div class="category">질문</div>
-                            <div class="date">24.05.31</div>
-                        </div>
-                        <div class="title">안녕</div>
-                    </div>
+                    {% endfor %}
                 </div>
                 <div class="view-all">전체 보기<i class="fa-solid fa-arrow-right"></i></div>
             </div>
             <div class="likeView">
                 <span>좋아요한 글</span>
                 <div class="like-list">
+                    {% for sorted_voted in sorted_voted_list %}
                     <div class="like" id="like-1">
                         <div class="meta">
-                            <div class="category">질문</div>
-                            <div class="date">24.05.31</div>
+                            <div class="category">
+                                {% if sorted_voted.get_model_name == "Question" %}
+                                질문
+                                {% elif sorted_voted.get_model_name == "Information" %}
+                                정보
+                                {% endif %}
+                            </div>
+                            <div class="date">{{ sorted_voted.create_date }}</div>
                         </div>
-                        <div class="title">안녕</div>
+                        <div class="title">{{ sorted_voted.subject }}</div>
                     </div>
-                    <div class="like" id="like-2">
-                        <div class="meta">
-                            <div class="category">질문</div>
-                            <div class="date">24.05.31</div>
-                        </div>
-                        <div class="title">안녕</div>
-                    </div>
+                    {% endfor %}
                 </div>
                 <div class="view-all">전체 보기<i class="fa-solid fa-arrow-right"></i></div>
             </div>
@@ -180,9 +181,6 @@
                 <div class="view-all">전체 보기<i class="fa-solid fa-arrow-right"></i></div>
             </div>
         </div>
-
-        <!-- 바닥글 -->
-        <div class="footers">{% include "html/footer.html" %}</div>
 
         <script src="/static/js/profileEvents.js"></script>
 </body>
