이미지 크기 수정

--- a/templates/html/Question/view.html
+++ b/templates/html/Question/view.html
@@ -68,7 +68,8 @@
             <!-- 질문 내용 -->
             <div class="content">
                 {% if question.imgs %}
-                <img id="question-img-1" src="{{ question.imgs.url }}">
+                <img id="question-img-1" src="{{ question.imgs.url }}" style="width: 100%;">
+                </div>
                 <!-- ## 이미지 나중에 배열로 바뀔 거라, 여기 for문으로 바뀌고, id 뒤에 몇번째 이미지인지 번호가 붙을 거임 -->
                 {% endif %}
                 <!-- <br /> -->
