--- a/templates/html/Information/view.html
+++ b/templates/html/Information/view.html
@@ -14,7 +14,7 @@
 
 <!-- top 배경이미지 -->
 <div class="top-background">
-    <h1 class="top-background-text">질문</h1>
+    <h1 class="top-category">질문</h1>
 </div>
 
 <!-- error message 표시(자기 추천 x 등의 에러 메시지) -->
