--- a/templates/html/Information/write.html
+++ b/templates/html/Information/write.html
@@ -33,7 +33,7 @@
     <div class="login"></div>
 
     <div class="top-background">
-        <h1 class="top-background-text">질문</h1>
+        <h1 class="top-category">질문</h1>
     </div>
 
     <main class="information-write">
