--- a/templates/html/Question/answer.html
+++ b/templates/html/Question/answer.html
@@ -9,7 +9,7 @@
 {% block content %}
 <!-- top 배경이미지 -->
 <div class="top-background">
-    <h1 class="top-background-text">질문</h1>
+    <h1 class="top-category">질문</h1>
 </div>
 
 <main class="question-write">
