--- a/templates/html/Question/write.html
+++ b/templates/html/Question/write.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="top-background">
-    <h1 class="top-background-text">질문</h1>
+    <h1 class="top-category">질문</h1>
 </div>
 
 <main class="question-write">
